--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/qr-code-component-main/reset.css">
-  <link rel="stylesheet" href="/qr-code-component-main/style.css">
+  <link rel="stylesheet" href="/reset.css">
+  <link rel="stylesheet" href="/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
   <main>
     <div class="card">
-      <img src="/qr-code-component-main/images/image-qr-code.png">
+      <img src="/images/image-qr-code.png">
 
       <span id="title">Improve your front-end skills by building projects</span>
 
